need fix images

--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
       <div></div>
     </div>
     
-
 <section class="services-section">
     <div class="services-container container">
         <h2 class="services-section__title h2 fade js-needAnimate">
@@ -36,23 +35,23 @@
                     <svg viewBox="0 0 110 110">
                         <g id="icon_01">
                             <path fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10"
-                                  d="M102.6,75.9c-2.3,5.2-5.5,10-9.3,14.2"/>
+                                  d="M102.6,75.9c-2.3,5.2-5.5,10-9.3,14.2"./>
                             <path fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10" d="M43.8,4.2C47.4,3.4,51.2,3,55,3
-                    c28.7,0,52,23.3,52,52c0,2.6-0.2,5.2-0.6,7.6"/>
+                    c28.7,0,52,23.3,52,52c0,2.6-0.2,5.2-0.6,7.6"./>
                             <path fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10"
-                                  d="M11.3,26.7c1.1-1.7,2.3-3.3,3.6-4.9"/>
+                                  d="M11.3,26.7c1.1-1.7,2.3-3.3,3.6-4.9"./>
                             <path fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10" d="M70.2,104.7c-4.8,1.5-9.9,2.3-15.2,2.3
-                    C26.3,107,3,83.7,3,55c0-5.4,0.8-10.6,2.3-15.5"/>
+                    C26.3,107,3,83.7,3,55c0-5.4,0.8-10.6,2.3-15.5"./>
                             <path fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10" d="M17.7,55c0-20.6,16.7-37.3,37.3-37.3
-                    c6.8,0,13.2,1.8,18.7,5"/>
+                    c6.8,0,13.2,1.8,18.7,5"./>
                             <path fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10"
-                                  d="M29.1,81.9c-1.9-1.8-3.6-3.8-5-6"/>
+                                  d="M29.1,81.9c-1.9-1.8-3.6-3.8-5-6"./>
                             <path fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10" d="M92.3,55c0,20.6-16.7,37.3-37.3,37.3
-                    c-6.8,0-13.2-1.8-18.7-5"/>
+                    c-6.8,0-13.2-1.8-18.7-5"./>
                             <path fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10"
-                                  d="M80.9,28.1c1.9,1.8,3.6,3.8,5,6"/>
+                                  d="M80.9,28.1c1.9,1.8,3.6,3.8,5,6"./>
                             <polygon fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10" points="71.5,45.4 55,35.8 38.5,45.4 38.5,64.6
-                    55,74.2 71.5,64.6"/>
+                    55,74.2 71.5,64.6"./>
                         </g>
                     </svg>
                 </div>
@@ -68,17 +67,17 @@
                     <svg viewBox="0 0 108.5 110.1">
                         <g id="icon_02">
                             <polyline fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10"
-                                      points="3,91.3 3,66.1 25.4,66.1 		"/>
+                                      points="3,91.3 3,66.1 25.4,66.1 		"./>
                             <polyline fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10"
-                                      points="25.4,74.7 25.4,107.1 3,107.1 		"/>
+                                      points="25.4,74.7 25.4,107.1 3,107.1 		"./>
                             <polyline fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10" points="42.5,68.5 42.5,3 64.9,3 64.9,107.1
-			42.5,107.1 		"/>
+			42.5,107.1 		"./>
                             <line fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10" x1="42.5"
-                                  y1="81.3" x2="42.5" y2="74.7"/>
+                                  y1="81.3" x2="42.5" y2="74.7"./>
                             <polyline fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10" points="105.5,90 105.5,107.1 83.1,107.1
-			83.1,98.6 		"/>
+			83.1,98.6 		"./>
                             <polyline fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10" points="83.1,91.3 83.1,39.3 105.5,39.3
-			105.5,76.5 		"/>
+			105.5,76.5 		"./>
                         </g>
                     </svg>
 
@@ -95,17 +94,17 @@
                     <svg viewBox="0 0 109.6 107">
                         <g id="icon_03">
                             <path fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10" d="M30.3,61.3c-4.9-13.4,2-28.3,15.5-33.3
-			c4.4-1.6,9-2,13.4-1.2"/>
+			c4.4-1.6,9-2,13.4-1.2"./>
                             <path fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10"
-                                  d="M44.2,76.1c-1.7-0.7-3.2-1.6-4.7-2.7"/>
+                                  d="M44.2,76.1c-1.7-0.7-3.2-1.6-4.7-2.7"./>
                             <path fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10" d="M79,43.5c4.9,13.4-2,28.3-15.5,33.3
-			c-4.4,1.6-9,2-13.4,1.2"/>
+			c-4.4,1.6-9,2-13.4,1.2"./>
                             <path fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10"
-                                  d="M65.1,28.7c1.7,0.7,3.2,1.6,4.7,2.7"/>
+                                  d="M65.1,28.7c1.7,0.7,3.2,1.6,4.7,2.7"./>
                             <polygon fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10" points="88,12.4 36.7,3.3 3.4,43.3 21.4,92.4
-			72.6,101.6 105.9,61.5 		"/>
+			72.6,101.6 105.9,61.5 		"./>
                             <line fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10" x1="73.2"
-                                  y1="70.5" x2="107.5" y2="104.9"/>
+                                  y1="70.5" x2="107.5" y2="104.9"./>
                         </g>
                     </svg>
 
@@ -122,21 +121,21 @@
                     <svg viewBox="0 0 109.3 110.1">
                         <g id="icon_04">
                             <path fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10" d="M82.2,67.8c-8.2,15.8-27.7,21.9-43.5,13.7
-			c-5.2-2.7-9.4-6.7-12.3-11.3"/>
+			c-5.2-2.7-9.4-6.7-12.3-11.3"./>
                             <line fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10" x1="37.7"
-                                  y1="37.4" x2="37.7" y2="44"/>
+                                  y1="37.4" x2="37.7" y2="44"./>
                             <line fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10" x1="67.6"
-                                  y1="37.4" x2="67.6" y2="44"/>
+                                  y1="37.4" x2="67.6" y2="44"./>
                             <path fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10"
-                                  d="M19,93.3c-4.5-4.1-8.2-9-11-14.4"/>
+                                  d="M19,93.3c-4.5-4.1-8.2-9-11-14.4"./>
                             <path fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10" d="M106.3,56.2c-0.6,28.2-23.7,50.9-52,50.9
-			c-7.4,0-14.5-1.6-20.9-4.4"/>
+			c-7.4,0-14.5-1.6-20.9-4.4"./>
                             <path fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10"
-                                  d="M92.2,19.4c1.6,1.7,3.1,3.5,4.4,5.4"/>
+                                  d="M92.2,19.4c1.6,1.7,3.1,3.5,4.4,5.4"./>
                             <path fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10"
-                                  d="M74.5,7.1c2.7,1.1,5.2,2.5,7.6,4"/>
+                                  d="M74.5,7.1c2.7,1.1,5.2,2.5,7.6,4"./>
                             <path fill="none" stroke="#1F65D9" stroke-width="6" stroke-miterlimit="10" d="M3,46.3C7.1,21.7,28.5,3,54.3,3
-			c4.6,0,9.1,0.6,13.3,1.7"/>
+			c4.6,0,9.1,0.6,13.3,1.7"./>
                         </g>
                     </svg>
 
@@ -153,9 +152,9 @@
     <div class="services-background">
         <svg width="590" height="690" viewBox="0 0 288 336" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M287.1 195.9V251.9H287L239.2 279.9L191.4 307.9L167.5 321.9L143.5 335.9L119.6 321.9L95.7 307.9L47.9 279.9L0 251.9V195.9L47.9 168V223.9L95.7 251.9L119.6 265.9L143.5 279.9L167.5 265.9L191.4 251.9L239.2 223.9V167.9L287 195.9H287.1Z"
-                  fill="white"/>
+                  fill="white"./>
             <path d="M287.1 83.9V139.9H287L239.2 111.9L191.4 83.9L167.5 69.9V209.9L143.5 223.9L119.6 209.9V70L95.7 83.9L47.9 111.9V112L0 139.9V83.9L47.9 56L95.7 28L119.6 14L143.5 0L167.5 14L191.4 28L239.2 56L287 83.9H287.1Z"
-                  fill="white"/>
+                  fill="white"./>
         </svg>
 
     </div>
@@ -165,7 +164,7 @@
     <div class="lightpaper-container container js-needAnimate">
         <div class="lightpaper-text">
             <div class="lightpaper-text__doc">
-                <img src="/img/docs.png" alt="">
+                <img src="./img/docs.png" alt="">
             </div>
             <h3 class="lightpaper-title fade js-needAnimate h3">OUR LIGHTPAPER</h3>
             <p class="lightpaper-p fade js-needAnimate">
@@ -177,7 +176,7 @@
         </div>
 
         <div class="lightpaper-img js-needAnimate">
-            <img src="/img/broshure.png" alt="">
+            <img src="./img/broshure.png" alt="">
         </div>
     </div>
 </section>
@@ -186,8 +185,8 @@
   </main>
 
   
-  <script defer src="/js/modules/modules.min.js"></script>
-  <script defer src="/js/general.js"></script>
+  <script defer src="./js/modules/modules.min.js"></script>
+  <script defer src="./js/general.js"></script>
 
   
 
