--- a/page-template.html
+++ b/page-template.html
@@ -23,8 +23,8 @@
   </main>
 
   
-  <script defer src="/js/modules/modules.min.js"></script>
-  <script defer src="/js/general.js"></script>
+  <script defer src="./js/modules/modules.min.js"></script>
+  <script defer src="./js/general.js"></script>
 
   
 
