--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <div class="lightpaper-container container js-needAnimate">
         <div class="lightpaper-text">
             <div class="lightpaper-text__doc">
-                <img src="/.img/docs.png" alt="">
+                <img src="./img/docs.png" alt="">
             </div>
             <h3 class="lightpaper-title fade js-needAnimate h3">OUR LIGHTPAPER</h3>
             <p class="lightpaper-p fade js-needAnimate">
@@ -177,7 +177,7 @@
         </div>
 
         <div class="lightpaper-img js-needAnimate">
-            <img src="/.img/broshure.png" alt="">
+            <img src="./img/broshure.png" alt="">
         </div>
     </div>
 </section>
